src: Add ISR for 0x80
Signed-off-by: Claudio Carvalho <claudiodecarvalho@gmail.com>

--- a/programs/blank/Makefile
+++ b/programs/blank/Makefile
@@ -3,4 +3,4 @@ all:
 	i686-elf-gcc -g -T ./linker.ld -o ./blank.bin -ffreestanding -O0 -nostdlib -fpic -g ./build/blank.o
 
 clean:
-	rm -f ./build/blank.o
+	rm -f ./build/blank.o ./blank.bin
