--- a/programs/stdlib/Makefile
+++ b/programs/stdlib/Makefile
@@ -1,5 +1,6 @@
-FILES = ./build/start.asm.o ./build/peachos.asm.o
-INCLUDES =
+FILES = ./build/start.asm.o ./build/peachos.asm.o ./build/stdlib.o
+INCLUDES = -I./src
+FLAGS = -g
 
 all: $(FILES)
 	i686-elf-ld -m elf_i386 -relocatable $(FILES) -o ./stdlib.elf
@@ -9,6 +10,9 @@ all: $(FILES)
 
 ./build/peachos.asm.o : ./src/peachos.asm
 	nasm -f elf ./src/peachos.asm -o ./build/peachos.asm.o
+
+./build/stdlib.o : ./src/stdlib.c
+	i686-elf-gcc $(INCLUDES) $(FLAGS) -std=gnu99 -c ./src/stdlib.c -o ./build/stdlib.o
 
 clean:
 	rm -f $(FILES)
