programs/stdlib/stdio: Add printf()
It supports %i and %s.

--- a/programs/blank/Makefile
+++ b/programs/blank/Makefile
@@ -1,6 +1,10 @@
 FILES = ./build/blank.o
 INCLUDES = -I../stdlib/src
-FLAGS = -g
+
+FLAGS = -g -ffreestanding -nostdlib -nostartfiles -nodefaultlibs
+FLAGS += -falign-jumps -falign-functions -falign-labels -falign-loops -fstrength-reduce
+FLAGS += -Iinc -O0 -fomit-frame-pointer -finline-functions -fno-builtin
+FLAGS += -Wno-unused-function -Werror -Wno-unused-label -Wno-cpp -Wno-unused-parameter -Wall
 
 all: $(FILES)
 	i686-elf-gcc -g -T ./linker.ld -o ./blank.elf -ffreestanding -O0 -nostdlib -fpic -g $(FILES) ../stdlib/stdlib.elf
